--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "check-prop-types": "^1.1.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.0",
     "jest-enzyme": "^7.1.2"
   }
 }
